# ElemenTC

./: CMakeLists.txt
Header_Files/Card/: Assets.h  Card.h
Header_Files/Card/Card_Types/1_Star/: Air.h  Earth.h  Fire.h  Water.h
Header_Files/Card/Card_Types/2_Star/: Ice.h  Magma.h  Mud.h  Sand.h  Smoke.h  Steam.h
Header_Files/Player/: Player.h
Source_Files/: Source.cpp
Source_Files/Card/: Assets.cpp  Card.cpp
Source_Files/Card/Card_Types/1_Star/: Air.cpp  Earth.cpp  Fire.cpp  Water.cpp
Source_Files/Card/Card_Types/2_Star/: Ice.cpp  Magma.cpp  Mud.cpp  Sand.cpp  Smoke.cpp  Steam.cpp
Source_Files/Player/: Player.cpp
